# projeto_de_redes

./: README.md  pyproject.toml
projeto_de_redes/: README.md  client.py  client_interface.py  client_utils.py  pyproject.toml  server.py
