[tool.poetry]
name = "py-simple-gui"
version = "0.1.0"
description = ""
authors = ["Vinicius Cabral  <viniciuscabral26@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pysimplegui = "^5.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
